# ResearchTrack-Second-Assignment

./: CMakeLists.txt  README  readme.md
assignment2_p1/assignment_2_2024/: CMakeLists.txt  package.xml
assignment2_p1/assignment_2_2024/launch/: assignment1.launch
launch/: assignment1.launch  gazebo.launch.py  gazebo2.launch.py  move_robot_launch.py
scripts/: action_client_node.py  move_robot_node.py
src/: move_robot_node.py
srv/: MoveRobot.srv
